--- a/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
+++ b/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
@@ -1,6 +1,26 @@
 .messenger-content-dialogs {
     padding: 18px 0;
-
+    &__name{
+        padding:0px 14px 14px ;
+        display: flex;
+        justify-content: space-between;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 22px;
+        color: var(--color-messanger);
+    }
+    .base-search-input{
+        padding: 0 14px;
+    }
+    &__add{
+        padding: 10px 0px;
+        margin: 0px 14px;
+        border: 1px solid var(--border-active);
+        border-radius: 6px;
+        position: absolute;
+        bottom: 14px;
+        width: calc(100% - 28px);
+    }
 }
 
 .messenger-content-dialogs__parameters-container {
@@ -32,17 +52,18 @@
 .messenger-content-dialogs__parameters {
     text-align: left;
     overflow: hidden;
-    height: 164px;
+    height:  235px;
     margin: 11px 20px 0;
     background: var(--context-background-color);
     border: 1px solid var(--context-background-color);
     border-radius: 6px;
 }
 .messenger-content-dialogs__parameter {
-    padding: 10px 18px;
+    padding: 9px 18px;
     cursor: pointer;
     font-style: normal;
     font-weight: normal;
+    text-transform: capitalize ;
     font-size: 16px;
     line-height: 21px;
     transition: .3s ease;
