feat: redesign search input

--- a/src/components/MessagesContainer/messages-container.scss
+++ b/src/components/MessagesContainer/messages-container.scss
@@ -7,7 +7,7 @@
 }
 .messages-container__input{
   position: relative;
-  padding: 15px 40px 14px 29px;
+  padding: 22px 19px ;
   width: 100%;
   max-width: 100%;
   background: var(--messages-input-wrapper-bg);
