--- a/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
+++ b/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
@@ -25,21 +25,22 @@
 
 .messenger-content-dialogs__parameters-container {
     text-align: left;
-    margin-top: 23px;
-    padding: 0 16px;
+    margin-top: 18px;
+    padding: 10px 18px;
     display: flex;
     width: 100%;
     align-items: center;
     justify-content: space-between;
+    background-color: var(--header-color);
 }
 
 .messenger-content-dialogs__parameters-button {
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 19px;
-    text-transform: uppercase;
-    color: var(--font-color);
+line-height: 140%;
+    
+    color: var(--sub-text-color);
     position: relative;
 }
 .messenger-content-dialogs__parameters-icon {
@@ -79,15 +80,19 @@
 
 .messenger-search-group {
     text-align: left;
-    padding: 0 16px;
+   
     margin-top: 17px;
 }
 .messenger-search-group__dialogs {
-    margin-top: 9px;
+   
 }
 .messenger-search-group__dialog {
-    padding: 7px 0;
-    border-top: 1px solid rgba(117, 117, 137, 0.22);
+  margin: 0px 14px; 
+    border-top: 1px solid var(--header-color);
+    &:nth-child(1){
+        border: none;
+    }
+
 }
 
 .messenger-content-dialogs__loader {
