--- a/src/components/MessengerContent/MessengerContentPersonalMessages/messenger-content-personal-messages.scss
+++ b/src/components/MessengerContent/MessengerContentPersonalMessages/messenger-content-personal-messages.scss
@@ -12,6 +12,101 @@
     width: calc(calc(100% - 90px) * 0.725);
     max-width: calc(calc(100% - 166px) * 0.725);
   }
+  &__tags{
+    display: flex;
+    align-items: center;
+    color: var(--sub-text-color);
+  }
+  &__slider, &__no-slider{
+    // max-width: 500px;
+ 
+    margin-left: 10px;
+    width: 100%;
+    max-width: 300px;
+    font-size: 16px;
+    line-height: 140%;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    text-align: center;
+    color: var(--main-font-color);
+    font-size: 10px;
+line-height: 130%;
+    .swiper-button-prev{
+        left: -2px;
+        background-image: url('../../../assets/follderArrovPrev.svg');
+        background-size: 100% 100%;
+        background-position: left;
+        background-repeat: no-repeat;
+    }
+    .swiper-button-next{
+        right: -4px; 
+        background-image: url('../../../assets/follderArrovNext.svg');
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .swiper-slide{ 
+         width: fit-content !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .swiper-button-next::after, .swiper-button-prev::after {
+        content: none;
+    }
+    .swiper-scrollbar{
+        background: none;
+    }
+    .swiper-wrapper{
+        padding: 0 ;
+        display: flex;
+        justify-content: space-between;
+    }
+    &_no-slide{
+        margin-left: 18px;
+        
+    }
+    &_no-slide:nth-child(1){
+        margin-left: 0;
+    }
+    .swiper-button-disabled{
+        display: none;
+    }
+    &-active {
+        width: fit-content;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
+        &:after{
+            content: '';
+            position: absolute;
+            height: 2px;
+            width: 100%;
+            background: var(--green-color);
+            right: 0;
+            left: auto;
+            bottom: 0px;
+        }
+    }
+    &-tag{
+      background: #1D1D35;
+      border-radius: 22px;
+      overflow: hidden;
+      padding: 4px 11px;
+    }
+}
+&__no-slider{
+  &-tag{
+    margin-left: 10px;
+    overflow: visible;
+    &:nth-child(1){
+      margin: 0;
+    }
+  }
+}
 }
 
 .messenger-content-personal-messages__header{
@@ -35,6 +130,7 @@
 }
 .messenger-content-personal-messages__name-container{
   margin-left: 18px;
+  width: 100%;
   .messenger-content-personal-messages__name-icon{
     font-weight: normal;
     font-size: 16px;
