--- a/src/components/SettingsContainer/SettingsNavNew/settings-nav.scss
+++ b/src/components/SettingsContainer/SettingsNavNew/settings-nav.scss
@@ -98,7 +98,7 @@
   font-weight: normal;
   font-size: 12px;
   line-height: 130%;
-  color: var(--font-color);
+  color: var(--sub-text-color);
   text-decoration: none;
   transition: .2s ease;
   height: 40px;
