--- a/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
+++ b/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
@@ -39,7 +39,13 @@ margin-bottom: 8px;
     width: 100%;
   }
 }
-
+&__switcher{
+  display: flex;
+  flex-direction: column;
+  .switcher{
+    margin-bottom: 14px;
+  }
+}
 }
 .settings-integrations-form__body {
   width: 100%;
@@ -50,9 +56,10 @@ margin-bottom: 8px;
   flex-direction: column;
 }
 .settings-integrations-form__field {
-  padding: 36px 30px;
+  margin: 0px 32px;
+  padding: 40px 0px 31px;
   border-bottom: 1px solid var(--separator-color);
-  width: 100%;
+  width: initial;
 }
 .settings-integrations-form__header {
   font-style: normal;
@@ -158,8 +165,8 @@ margin-bottom: 8px;
   margin-left: 50px;
   padding: 8px 10px;
   color: var(--modal-font-color);
-  background: var(--modal-element-hover-bg-color);
-  border: .7px solid var(--modal-input-border-color);
+  background: var(--messenger-search-input-bg-active);
+  border: .7px solid var(--settings-nav-border);
   box-sizing: border-box;
   border-radius: 3px;
   text-align: left;
@@ -179,8 +186,8 @@ margin-bottom: 8px;
   // padding: 8px 10px;
   padding: 0px 10px;
   color: var(--modal-font-color);
-  background: var(--modal-element-hover-bg-color);
-  border: .7px solid var(--modal-input-border-color);
+  background: var(--messenger-search-input-bg-active);
+  border: .7px solid var(--settings-nav-border);
   box-sizing: border-box;
   border-radius: 3px;
   text-align: left;
@@ -396,6 +403,7 @@ margin-bottom: 8px;
   .settings-integrations-form__input_test {
     margin-left: 0px;
     margin-right: 15px;
+    
   
   }
   .settings-integrations-form__label-test-button{
@@ -419,6 +427,10 @@ margin-bottom: 8px;
 }
 .settings-integrations-form__select_active {
   border: 1px solid #5EC075 !important;
+  .settings-integrations-form__dropdown-inner-arrow{
+    transform: rotate(180deg);
+    transition: 0.3s ease;
+  }
 }
 .settings-integrations-form__date-column{
   margin-right: 16px;
