--- a/src/views/settings/integrations/integrations.scss
+++ b/src/views/settings/integrations/integrations.scss
@@ -1,13 +1,12 @@
 .settings-integrations__header {
-  height: 78px;
-  padding: 16px 45px 0px;
+  height: 64px;
+  padding: 0px 32px 0px;
   position: relative;
   text-align: left;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  border-bottom: 1px solid var(--separator-color);
-
+  background-color: var(--header-color);
   font-style: normal;
   font-weight: normal;
   font-size: 22px;
@@ -18,6 +17,7 @@
     display: flex;
     height: 100%;
     padding-left: 80px;
+    padding-top: 10px;
 
     &-link {
       padding-right: 52px;
@@ -48,6 +48,12 @@
   }
 
   &-name {
-    padding-bottom: 16px;
+    // padding-bottom: 16px;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 34px;
+    &-svg{
+      margin-right: 37px;
+    }
   }
 }
