--- a/src/components/SettingsContainer/SettingsFinanse/settings-finance-payment.scss
+++ b/src/components/SettingsContainer/SettingsFinanse/settings-finance-payment.scss
@@ -38,7 +38,11 @@
         flex-direction: column;
         &-main{
             margin-top: 24px;
-            width: 550px;
+            width: 100%;
+            &:nth-child(2){
+                border-bottom: 1px solid #252544;
+                padding-bottom: 13px;
+            }
             &_title{
                 color: #CFCFE4;
             }
@@ -63,7 +67,7 @@
             justify-content: space-between;
             padding: 0 30px;
             padding-bottom: 23px;
-            border-bottom: 2px solid #40406B;
+            border-bottom: 2px solid #1D1D35;
             &_title{
                 width: 400px;
                 padding-top: 23px;
@@ -73,7 +77,7 @@
             &_subtitle{
                 padding-top: 23px;
                 font-size: 18px;
-                color: #84d160ce;
+                color: #5EC075;
             }
         }
         &_cell{
@@ -108,8 +112,8 @@
                 border: 1px solid #40406B;
                 &:hover{
                     background: #4d4d7e;
-                    border: 1px solid #84D160;
-                    color: #84D160;
+                    border: 1px solid #5EC075;
+                    color: #5EC075;
                     transition: all 0.3s;
                     & span{
                         background: linear-gradient(45.66deg, #22A595 -40.44%, #84D160 120.07%);
@@ -135,8 +139,8 @@
                 border: 1px solid #40406B;
                 &:hover{
                     background: #4d4d7e;
-                    border: 1px solid #84D160;
-                    color: #84D160;
+                    border: 1px solid #5EC075;
+                    color: #5EC075;
                     transition: all 0.3s;
                     & span{
                         background: linear-gradient(45.66deg, #22A595 -40.44%, #84D160 120.07%);
@@ -160,8 +164,8 @@
         &_cancel{
             padding: 8px 32px 8px 32px;
             border-radius: 6px;
-            color: #84d160ce;
-            border: 1px solid #84d160ce;
+            color: #5EC075;
+            border: 1px solid #5EC075;
             background: #252544;
             cursor: pointer;
         }
@@ -171,14 +175,16 @@
             border-radius: 6px;
             background: linear-gradient(45.66deg, #22A595 -40.44%, #84D160 120.07%);
             cursor: pointer;
+            color: #1D1D35;
+            font-weight: 500;
         }
     }
 }
 
 .settings-finance-payment__method_type-active{
     /* background: #4d4d7e; */
-    border: 1px solid #84D160;
-    color: #84D160;
+    border: 1px solid #5EC075;
+    color: #5EC075;
     & span{
         padding: 2px 5px 2px 5px;
         border-radius: 3px;
@@ -216,8 +222,8 @@
 }
 
 .mounth-active{    
-    border: 1px solid #84D160;
+    border: 1px solid #5EC075;
     & .mounth__element_mounth{
-        color: #84D160;
+        color: #5EC075;
     }
 }
