--- a/src/components/SettingsContainer/SettingsPartners/settings-partners-history.scss
+++ b/src/components/SettingsContainer/SettingsPartners/settings-partners-history.scss
@@ -1,9 +1,8 @@
 .settings-partners-history__table_row{
     display: flex;
-    justify-content: space-between;
-    background: #252544;
-    padding: 24px 20px 24px 20px;
-    border-bottom: 2px solid #40406B;
+    background: #1D1D35;
+    padding: 24px 20px;
+    border-bottom: 2px solid #252544;
     &:last-child{
         border-radius: 0px 0px 6px 6px;
         border-bottom: none;
@@ -11,12 +10,39 @@
     &-cell{
         font-size: 12px;
         color: #CFCFE4;
-        text-align: left;
-        &:nth-child(2){
-            padding-left: 5px;
+        width: 20%;
+        &:nth-child(1){
+            width: 20%;
         }
-        &:nth-child(3){
-            padding-left: 10px;
+        &:nth-child(2){
+            width: 20%;
+        }
+        &:nth-child(4){
+            width: 25%;
+        }
+        &:last-child{
+            text-align: center;
+            margin-left: auto;
+            width: 110px;
         }
     }
+}
+
+.row-cell-error{
+    background: #EB57571A;
+    color: #EB5757;
+    width: 120px;
+    padding: 4px 12px;
+    border-radius: 22px;
+    text-align: center;
+    margin-left: 25px;
+}
+.row-cell-accept{
+    background: #5EC0751A;
+    color: #5EC075;
+    width: 110px;
+    padding: 4px 12px;
+    border-radius: 22px;
+    text-align: center;
+    margin-left: 25px;
 }
