--- a/src/components/SettingsContainer/SettingsPartners/settings-partners-links.scss
+++ b/src/components/SettingsContainer/SettingsPartners/settings-partners-links.scss
@@ -1,14 +1,17 @@
 .settings-partners-links__table_row{
     display: flex;
     justify-content: space-between;
-    background: #252544;
+    background: #1D1D35;
     padding: 24px 20px 24px 20px;
-    border-bottom: 2px solid #40406B;
+    border-bottom: 2px solid #252544;
+    width: 100%;
+    max-width: 1440px;
+    min-width: 856px;
     &:last-child{
         border-radius: 0px 0px 6px 6px;
         border-bottom: none;
     }
-    &-cell{
+    /* &-cell{
         font-size: 12px;
         color: #CFCFE4;
         text-align: left;
@@ -21,11 +24,26 @@
         &:nth-child(3){
             width: 235px;
         }
+    } */
+    &-cell{
+        font-size: 12px;
+        color: #CFCFE4;
+        text-align: left;
+        width: 20%;
+        &:nth-child(2){
+            width: 40%;
+            padding-left: 10px;
+        }
+        &:nth-child(3){
+            text-align: right;
+            padding-right: 10px;
+        }
     }
+
     &-buttons{
-        width: 80px;
+        width: 20%;
         display: flex;
-        justify-content: space-between;
+        justify-content: end;
     }
 }
 .settings-partners-link__table_row-button{
