--- a/src/views/settings/partners/links/links.scss
+++ b/src/views/settings/partners/links/links.scss
@@ -21,34 +21,39 @@
         font-size: 18px;
         color: #CFCFE4;
         margin-top: -4px;
+        font-weight: 400;
     }
     &__generation-links{
-        padding-top: 16px;
+        margin-top: 16px;
         &_title{
+            margin: 0;
             font-size: 12px;
             color: #CFCFE4;
         }
     }
     &__generation-links-create{
-        padding-top: 6px;
+        margin-top: 6px;
         &_input{
-            background: #252544;
+            background: #1D1D35;
             padding: 10px 10px 10px 10px;
             max-width: 475px;
             width: 100%;
             border-radius: 6px;
             margin-right: 16px;
             color: #CFCFE4;
+            border: 1px solid #252544;
             &::placeholder{
                 color: #40406B;
             }
         }
         &_button{
-            padding: 10px 12px 10px 12px;
+            padding: 10px 12px;
             background: linear-gradient(45.66deg, #22A595 -40.44%, #84D160 120.07%);
             border-radius: 6px;
             color: #1D1D35;
             cursor: pointer;
+            font-size: 12px;
+            font-weight: 400;
         }
     }
 }
@@ -65,23 +70,26 @@
         padding: 32px 0px 0px 32px;
         border-collapse: collapse;
         &-row{
-            background: #34345e;
+            background: #252544;
             border-radius: 6px 6px 0px 0px;
             display: flex;
             justify-content: space-between;
+            width: 100%;
+            max-width: 1440px;
         }
         &-cell{
             font-size: 10px;
             color: #9797BB;
             padding: 12px 20px 12px 20px;
-            &:nth-child(1){
-                width: 200px;
-            }
+            width: 20%;
             &:nth-child(2){
-                width: 350px;
+                width: 40%;
             }
             &:nth-child(3){
-                width: 235px;
+                text-align: right;
+            }
+            &:nth-child(4){
+                text-align: right;
             }
         }
     }
@@ -113,5 +121,9 @@
     color: #9797BB;
     display: flex;
     justify-content: center;
-    padding: 100px;
+    align-items: center;
+    height: auto;
+    width: 100%;
+    min-height: 450px;
+    background: #1D1D35;
 }
