--- a/src/components/SettingsContainer/SettingsPartners/settings-partners-profit-cashback.scss
+++ b/src/components/SettingsContainer/SettingsPartners/settings-partners-profit-cashback.scss
@@ -1,10 +1,14 @@
 .settings-partners-profit-cashback{
-    width: 100%;
-    height: 100%;
-    background: #00000054;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.34);
     position: absolute;
-    top: 0;
     left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
     &__block{
         padding: 0px 24px 24px 24px;
         width: 520px;
