--- a/src/views/settings/partners/profit/profit.scss
+++ b/src/views/settings/partners/profit/profit.scss
@@ -2,15 +2,17 @@
     width: 100%;
     padding-right: 40px;
     &-list{
-        max-width: 1200px;
+        
         width: 100%;
         display: flex;
         margin-left: 32px;
-        padding: 20px 14px 32px 0px;
+        padding: 20px 18px 32px 0px;
         border-bottom: 2px solid #40406B;
         &_item{
             height: 108px;
-            width: 204px;
+            
+            width: 100%;
+            min-width: 180px;
             background: #252544;
             border-radius: 6px;
             border: 1px solid #363663;
