--- a/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
+++ b/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
@@ -9,10 +9,14 @@
         line-height: 22px;
         color: var(--color-messanger);
     }
-    .base-search-input{
-        padding: 0 14px;
+    &__input{
+        margin: 0 14px;
+        .base-search-input__input{
+            border: 1px solid transparent;
+        }
     }
     &__add{
+        position: absolute;
         padding: 10px 0px;
         margin: 0px 14px;
         border: 1px solid var(--border-active);
@@ -37,8 +41,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-line-height: 140%;
-    
+    line-height: 140%;
     color: var(--sub-text-color);
     position: relative;
 }
