fix:show active parent folder when clicked children folder

--- a/src/components/SettingsContainer/SettingsNavNew/settings-nav.scss
+++ b/src/components/SettingsContainer/SettingsNavNew/settings-nav.scss
@@ -200,6 +200,9 @@ background: var(--settings-active-link)!important;
       -webkit-text-fill-color: transparent;
     }
   }
+  &-list{
+    
+  }
 }
 .settings-nav__list-container {
   height: calc(100% - 78px);
