--- a/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
+++ b/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
@@ -69,6 +69,9 @@ margin-bottom: 8px;
   justify-content:flex-start;
   padding-top: 22px;
 }
+  &__date-input_transparent{
+    width: inherit;
+  }
 }
 .settings-integrations-form__checkbox_no-padding{
   padding: 24px 0px 0px;
