--- a/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
+++ b/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
@@ -195,8 +195,8 @@ margin-bottom: 8px;
   margin-left: 50px;
   padding: 0px 0px 0px 10px;
   color: var(--modal-font-color);
-  background: var(--messenger-search-input-bg-active);
-  border: 1px solid var(--settings-nav-border);
+  background: var(--messenger-search-input-bg-active) !important;
+  border: 1px solid var(--settings-nav-border) !important;
   box-sizing: border-box;
   border-radius: 3px;
   text-align: left;
