--- a/src/components/SettingsContainer/SettingsPartners/settings-partners-referal.scss
+++ b/src/components/SettingsContainer/SettingsPartners/settings-partners-referal.scss
@@ -6,6 +6,7 @@
         border-bottom: 2px solid #40406B;
         &:last-child{
             border-radius: 0px 0px 6px 6px;
+            overflow: hidden;
             border-bottom: none;
         }
         &-cell{
