--- a/src/views/settings/answerphone/answerphone.scss
+++ b/src/views/settings/answerphone/answerphone.scss
@@ -1,15 +1,30 @@
-.answerphone{
+.settings-answerphone{
+    &__header{
+            height: 64px;
+            position: relative;
+            text-align: left;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            background-color: var(--header-color);
+            font-style: normal;
+            font-weight: normal;
+        font-size: 22px;
+        line-height: 29px;
+        color: var(--settings-header-color);
+        &-title{
+            font-size: 24px;
+            font-weight: 700;
+            color: #F0F0FA;
+            padding-left: 30px;
+        }
+    }
+    &__main{
+        padding: 30px 30px;
+        height: 100%;
+    }
     &__wrapper{
         text-align: left;
-        padding: 20px 31px;
-    }
-}
-
-.wrapper{
-    &__title{
-        font-size: 24px;
-        font-weight: 700;
-        color: #F0F0FA;
-        padding-bottom: 20px;
+        height: 100%;
     }
 }
