--- a/src/views/settings/partners/links/links.scss
+++ b/src/views/settings/partners/links/links.scss
@@ -2,8 +2,7 @@
     max-width: 1200px;
     width: 100%;
     text-align: left;
-    margin: 0;
-    padding: 41px 31px 41px 31px;
+    padding: 10px 0px 41px 0px;
     height: auto;
     &__block{
         display: flex;
@@ -60,17 +59,16 @@
 }
 
 .links__bottom{
-    width: 99%;
-    max-height: 100%;
+    width: 100%;
     height: 450px;
     text-align: left;
     overflow-x: hidden;
+    height: 100%;
     &_table{
-        margin-left: 33px;
-        max-width: 98%;
         width: 100%;
         padding: 32px 0px 0px 32px;
         border-collapse: collapse;
+        height: calc(100% - 100px);
         &-row{
             background: #252544;
             border-radius: 6px 6px 0px 0px;
@@ -125,9 +123,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 300px;
+    height: calc(100% - 160px);
     background: #1D1D35;
-    padding: 100px;
     text-align: center;
     flex-direction: column;
     &__button{
