--- a/src/views/settings/instagrams/instagrams.scss
+++ b/src/views/settings/instagrams/instagrams.scss
@@ -1,6 +1,4 @@
 .settings-instagrams__header {
-  height: 78px;
-  padding: 16px 45px;
   position: relative;
   text-align: left;
   display: flex;
@@ -45,7 +43,7 @@
   width: 100%;
   max-height: 100%;
   overflow-y: auto;
-  padding: 18px 45px 0;
+  padding-top: 18px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -54,7 +52,7 @@
   height: 183px;
   border-radius: 9px;
   background: #252544;
-  margin: 0 8px 27px;
+  margin-right: 8px;
   padding: 16px;
 
   display: flex;
