--- a/src/views/settings/whatsapps/whatsapps.scss
+++ b/src/views/settings/whatsapps/whatsapps.scss
@@ -1,6 +1,4 @@
 .settings-whatsapps__header {
-  height: 78px;
-  padding: 16px 45px;
   position: relative;
   text-align: left;
   display: flex;
@@ -41,7 +39,7 @@
   width: 100%;
   max-height: 100%;
   overflow-y: auto;
-  padding: 18px 45px 0;
+  padding-top: 18px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -50,12 +48,15 @@
   height: 209px;
   border-radius: 9px;
   background: #252544;
-  margin: 0 8px 27px;
+  margin-right: 8px;
   padding: 16px;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  &:last-child{
+    margin-right: 0px;
+  }
 }
 .settings-whatsapps__name {
   font-style: normal;
